--- a/views/EditOperator.ejs
+++ b/views/EditOperator.ejs
@@ -190,6 +190,11 @@
             <input type="text" id="iqamaPassport" name="iqamaPassport" value="<%= record.iqamaPassport || '' %>">
           </div>
           <div class="form-group">
+            <label for="certificateNo">Certificate No:</label>
+            <input type="text" id="certificateNo" name="certificateNo" value="<%= record.certificateNo || '' %>" readonly
+              style="color: green; font-weight: bold;">
+          </div>
+          <div class="form-group">
             <label>Current Profile Photo:</label>
             <% if (record.profilePic) { %>
               <img src="<%= record.profilePic %>" alt="Current Photo" class="current-photo">
