--- a/views/insertOperator.ejs
+++ b/views/insertOperator.ejs
@@ -160,6 +160,11 @@
             <label for="iqamaPassport">Iqama / Passport No:</label>
             <input type="text" id="iqamaPassport" name="iqamaPassport">
           </div>
+          <!-- <div class="form-group">
+            <label for="certificateNo">Certificate No:</label>
+            <input type="text" id="certificateNo" name="certificateNo" placeholder="Auto-generated" readonly 
+              style="color: green; font-weight: bold;">
+          </div> -->
           <div class="form-group">
             <label for="profile">Profile Photo (Required):</label>
             <input type="file" id="profile" name="profile" accept="image/*" required>
