--- a/views/EditOperator.ejs
+++ b/views/EditOperator.ejs
@@ -191,7 +191,7 @@
           </div>
           <div class="form-group">
             <label for="certificateNo">Certificate No:</label>
-            <input type="text" id="certificateNo" name="certificateNo" value="<%= record.certificateNo || '' %>" readonly
+            <input type="text" id="certificateNo" name="certificateNo" value="<%= record.certificateNo || '' %>"
               style="color: green; font-weight: bold;">
           </div>
           <div class="form-group">
